# galay

./: .gitignore  AGENTS.md  ASYNCMUTEX_IMPROVEMENT_CONCURRENTQUEUE.md  ASYNCMUTEX_OPTIMIZATION_SUMMARY.md  ASYNCMUTEX_THEORETICAL_ANALYSIS.md  ASYNCMUTEX_WAKEUP_ANALYSIS.md  ASYNCQUEUE_COMPARISON.md  ASYNCQUEUE_COMPARISON_REPORT.md  ASYNCQUEUE_DUPLICATION_ANALYSIS.md  ASYNCQUEUE_FIXES_SUMMARY.md  ASYNCQUEUE_IMPLEMENTATION_SUMMARY.md  ASYNCQUEUE_IMPROVEMENT_REPORT.md  ASYNCQUEUE_PROBLEMS.md  ASYNCQUEUE_TEST_RESULTS_FINAL.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  README_CN.md  TEST_ASYNCQUEUE_COMPREHENSIVE_README.md  TEST_ASYNC_MUTEX_README.md  test_netresult.cpp
benchmark/: CMakeLists.txt  README.md  RUN.sh  stress_tcp_client.cc  stress_tcp_server.cc
benchmark/c/: CMakeLists.txt
benchmark/etcd/: CMakeLists.txt  b1_kv.cc  bench_support.cc
benchmark/http/: CMakeLists.txt  b14_https_echo_throughput.cc  b15_header_parser_throughput.cc  b1_echo_server_throughput.cc  b2_client_throughput.cc
benchmark/http2/: CMakeLists.txt  b10_h2_multiplex_server_throughput.cc  b11_h2_multiplex_client_throughput.cc  b12_h2_tls_server_throughput.cc  b13_h2_tls_client_throughput.cc  b14_h2_kernel_pressure.cc  b15_h2_static_fast_path.cc  b3_h2c_server_throughput.cc  b4_h2c_client_throughput.cc  b9_hpack_codec_throughput.cc
benchmark/kernel/: CMakeLists.txt  b10_ring_buffer_throughput.cc  b11_tcp_iov_server_throughput.cc  b12_tcp_iov_client_throughput.cc  b13_sendfile_throughput.cc  b14_scheduler_wakeup_latency.cc  b1_compute_scheduler_throughput.cc  b2_tcp_server_throughput.cc  b3_tcp_client_throughput.cc  b4_udp_server_throughput.cc  b5_udp_client_throughput.cc  b6_udp_socket_throughput.cc  b7_file_io_throughput.cc  b8_mpsc_channel_throughput.cc  b9_unsafe_channel_throughput.cc
benchmark/mcp/: CMakeLists.txt  b1_stdio_request_throughput.cc  b2_http_request_throughput.cc  b3_http_concurrency_throughput.cc  b4_policy_defaults.cc
benchmark/mongo/: CMakeLists.txt  b1_ping.cc  b2_ping.cc
benchmark/mysql/: CMakeLists.txt  b1_pressure.cc  b2_pressure.cc  b3_pool_pressure.cc  b4_pool_lease_pressure.cc
benchmark/redis/: CMakeLists.txt  README.md  b1_async_client_throughput.cc  b2_connection_pool_throughput.cc  b3_tls_client_throughput.cc
benchmark/rpc/: CMakeLists.txt  b1_unary_rpc_throughput.cc  b2_streaming_rpc_throughput.cc  b3_service_discovery_latency.cc  b4_server_stream_throughput.cc  b5_bidirectional_stream_throughput.cc
benchmark/ssl/: CMakeLists.txt  b1_tls_client_throughput.cc  b2_tls_server_throughput.cc
benchmark/tracing/: CMakeLists.txt  b1_disabled_log.cc  b2_enabled_log.cc  b3_span_scope.cc  b4_traceparent.cc  b5_otlp_json_exporter.cc  b6_structured_event.cc  b7_batch_processor_schedule.cc
benchmark/utils/: CMakeLists.txt  b1_lru_cache_throughput.cc  b2_byte_queue_view_throughput.cc  b3_ring_buffer_throughput.cc  b4_bloom_filter_throughput.cc  b5_circuit_breaker_throughput.cc
benchmark/ws/: CMakeLists.txt  b5_ws_server_throughput.cc  b6_ws_client_throughput.cc  b7_wss_server_throughput.cc  b8_wss_client_throughput.cc
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/etcd/: CMakeLists.txt
examples/http/: CMakeLists.txt
examples/http2/: CMakeLists.txt  README.md
examples/kernel/: CMakeLists.txt
examples/mcp/: CMakeLists.txt
examples/mongo/: CMakeLists.txt
examples/mysql/: CMakeLists.txt
examples/redis/: CMakeLists.txt
examples/rpc/: CMakeLists.txt
examples/ssl/: CMakeLists.txt
examples/tracing/: CMakeLists.txt
examples/utils/: CMakeLists.txt
examples/ws/: CMakeLists.txt
galay/: CMakeLists.txt  galay.hpp
galay/algorithm/: Base64.cc  Base64.h  CMakeLists.txt  Md5.cc  Md5.h  MurmurHash3.cc  MurmurHash3.hpp  Salt.cc  Salt.h  Sha256.cc  Sha256.h  Sha512.h
galay/async/: NetResult.h  NetResult.inl  Socket.cc  Socket.h
galay/client/: TcpClient.h  TcpSslClient.h  UdpClient.h
galay/common/: Base.h  Buffer.cc  Buffer.h  Buffer.hpp  Bytes.cc  Bytes.h  CMakeLists.txt  Common.cc  Common.h  Error.cc  Error.h  Log.cc  Log.h  Reflection.cc  Reflection.h  Reflection.inl  RingBuffer.hpp  SchedulerHolder.hpp  SchedulerHolder.inl  SignalHandler.cc  SignalHandler.h  Strategy.hpp  Strategy.inl
galay/concurrency/: AsyncMutex.h  UnsafeChannel.inl
galay/kernel/: CMakeLists.txt  Coroutine.hpp  Coroutine.inl  Engine.h  KqueueEngine.cc  Timer.cc  Timer.h  Waker.cc  Waker.h
galay/runtime/: Runtime.cc  ThreadPool.cc
galay/server/: TcpServer.cc  TcpSslServer.cc  TcpSslServer.h  UdpServer.h
galay/utils/: App.cc  App.hpp  BackTrace.cc  BackTrace.h  CMakeLists.txt  CricuitBreaker.hpp  Distributed.cc  Distributed.hpp  Mvcc.hpp  Mvcc.inl  Parser.cc  Parser.h  Pool.hpp  Pool.inl  Pool.tcc  Proccess.cc  Proccess.h  Random.cc  Random.h  RateLimiter.cc  RateLimiter.h  SignalHandler.hpp  String.cc  String.h  System.cc  System.h  Thread.cc  Thread.h  Tree.cc  Tree.h  TypeName.h
src/c/: CMakeLists.txt
src/galay-mcp/: BUILD  CMakeLists.txt
src/galay-mongo/: BUILD  CMakeLists.txt
src/galay-redis/: BUILD  CMakeLists.txt
test/: CMakeLists.txt  mpsc_access.h  sched_access.h  test_aio.cc  test_algorithm_unit.cc  test_async_mutex.cc  test_async_queue.cc  test_async_waiter.cc  test_bidirectional.cc  test_buffer_unit.cc  test_file.cc  test_limit_waiter.cc  test_log_control.cc  test_log_lazy_init.cc  test_mpsc_channel.cc  test_ringbuffer.cc  test_ssl.cc  test_ssl_client.cc  test_ssl_server.cc  test_stream.cc  test_stream_client.cc  test_stress_threadpool.cc  test_tcp.cc  test_tcp_client.cc  test_tcp_server.cc  test_threadpool.cc  test_time.cc  test_udp_client.cc  test_udp_server.cc  test_unsafe_channel.cc  test_wait.cc  test_yeild.cc
test/c/: CMakeLists.txt
test/config/: CMakeLists.txt  install_include_layout.cmake  t_module_config_surface.cc
test/etcd/: CMakeLists.txt  t10_log.cc  t1_smoke.cc  t2_prefix.cc  t3_pipe.cc  t4_smoke.cc  t5_pipe.cc  t6_helpers.cc  t7_await.cc  t8_bench.cc  t9_task_watch.cc
test/http/: CMakeLists.txt  t10_chunk.cc  t11_router.cc  t12_router_check.cc  t13_mount.cc  t1_parser.cc  (+38 more)
(+2910 files in other folders)
