if(GALAY_BUILD_KERNEL)
    add_subdirectory(kernel)
endif()
if(GALAY_BUILD_SSL)
    add_subdirectory(ssl)
endif()
if(GALAY_BUILD_HTTP)
    add_subdirectory(http)
endif()
if(GALAY_BUILD_WS)
    add_subdirectory(ws)
endif()
if(GALAY_BUILD_HTTP2)
    add_subdirectory(http2)
endif()
if(GALAY_BUILD_REDIS)
    add_subdirectory(redis)
endif()
if(GALAY_BUILD_RPC)
    add_subdirectory(rpc)
endif()
if(GALAY_BUILD_MYSQL)
    add_subdirectory(mysql)
endif()
if(GALAY_BUILD_MONGO)
    add_subdirectory(mongo)
endif()
if(GALAY_BUILD_ETCD)
    add_subdirectory(etcd)
endif()
if(GALAY_BUILD_MCP)
    add_subdirectory(mcp)
endif()
if(GALAY_BUILD_TRACING)
    add_subdirectory(tracing)
endif()
if(GALAY_BUILD_UTILS)
    add_subdirectory(utils)
endif()
