if(GALAY_BUILD_C_API)
    add_subdirectory(c)
endif()

add_subdirectory(cpp/config)

if(GALAY_BUILD_UTILS)
    add_subdirectory(cpp/utils)
endif()
if(GALAY_BUILD_KERNEL)
    add_subdirectory(cpp/kernel)
endif()
if(GALAY_BUILD_SSL)
    add_subdirectory(cpp/ssl)
endif()
if(GALAY_BUILD_HTTP)
    add_subdirectory(cpp/http)
endif()
if(GALAY_BUILD_WS)
    add_subdirectory(cpp/ws)
endif()
if(GALAY_BUILD_HTTP2)
    add_subdirectory(cpp/http2)
endif()
if(GALAY_BUILD_REDIS)
    add_subdirectory(cpp/redis)
endif()
if(GALAY_BUILD_RPC)
    add_subdirectory(cpp/rpc)
endif()
if(GALAY_BUILD_MYSQL)
    add_subdirectory(cpp/mysql)
endif()
if(GALAY_BUILD_MONGO)
    add_subdirectory(cpp/mongo)
endif()
if(GALAY_BUILD_ETCD)
    add_subdirectory(cpp/etcd)
endif()
if(GALAY_BUILD_MCP)
    add_subdirectory(cpp/mcp)
endif()
if(GALAY_BUILD_TRACING)
    add_subdirectory(cpp/tracing)
endif()

add_subdirectory(scripts)
