if(TARGET galay::c-kernel AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/kernel/CMakeLists.txt")
    add_subdirectory(kernel)
endif()
if(TARGET galay::c-redis AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/redis/CMakeLists.txt")
    add_subdirectory(redis)
endif()
if(TARGET galay::c-mysql AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/mysql/CMakeLists.txt")
    add_subdirectory(mysql)
endif()
