function(galay_add_http_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay::http)
    target_include_directories(${target_name} PRIVATE ${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR})
    if(GALAY_HTTP_COROUTINE_WORKAROUND_ENABLED)
        target_compile_options(${target_name} PRIVATE ${GALAY_HTTP_COROUTINE_WORKAROUND_FLAGS})
    endif()
    set_target_properties(${target_name} PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON)
endfunction()

function(galay_add_http_import_example target_name source_file)
    if(NOT TARGET galay-http-modules)
        return()
    endif()
    galay_add_http_example(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-http-modules)
    set_target_properties(${target_name} PROPERTIES CXX_EXTENSIONS OFF CXX_SCAN_FOR_MODULES ON)
endfunction()

galay_add_http_example(example_http_include_echo_server include/e1_echo_server.cc)
galay_add_http_example(example_http_include_echo_client include/e2_echo_client.cc)
galay_add_http_example(example_http_include_static_server include/e11_static_server.cc)
galay_add_http_example(example_http_include_http_proxy include/e12_http_proxy.cc)
galay_add_http_example(example_http_include_blacklist_server include/e15_blacklist_server.cc)

if(GALAY_SSL_FEATURE_ENABLED)
    galay_add_http_example(example_http_include_https_server include/e5_https_server.cc)
    galay_add_http_example(example_http_include_https_client include/e6_https_client.cc)
endif()

galay_add_http_import_example(example_http_import_echo_server import/e1_echo_server.cc)
galay_add_http_import_example(example_http_import_echo_client import/e2_echo_client.cc)
galay_add_http_import_example(example_http_import_static_server import/e11_static_server.cc)
galay_add_http_import_example(example_http_import_http_proxy import/e12_http_proxy.cc)
galay_add_http_import_example(example_http_import_blacklist_server import/e15_blacklist_server.cc)

if(GALAY_SSL_FEATURE_ENABLED)
    galay_add_http_import_example(example_http_import_https_server import/e5_https_server.cc)
    galay_add_http_import_example(example_http_import_https_client import/e6_https_client.cc)
endif()
