function(galay_add_mongo_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay::mongo)
    target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR})
    galay_mongo_apply_cxx(${target_name})
endfunction()

function(galay_add_mongo_import_example target_name source_file)
    if(NOT TARGET galay-mongo-modules)
        return()
    endif()
    galay_add_mongo_example(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-mongo-modules)
    if(GALAY_MONGO_IMPORT_COMPILE_OPTIONS)
        target_compile_options(${target_name} PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
    endif()
endfunction()

galay_add_mongo_example(example_mongo_include_sync_ping include/e1_ping.cc)
galay_add_mongo_example(example_mongo_include_async_ping include/e2_ping.cc)
galay_add_mongo_example(example_mongo_include_crud include/e3_crud.cc)
galay_add_mongo_example(example_mongo_include_pipeline include/e4_pipeline.cc)
galay_add_mongo_example(example_mongo_include_command include/e5_command.cc)

if(GALAY_MONGO_BUILD_MODULE_EXAMPLES_EFFECTIVE)
    galay_add_mongo_import_example(example_mongo_import_sync_ping import/e1_ping.cc)
    galay_add_mongo_import_example(example_mongo_import_async_ping import/e2_ping.cc)
    galay_add_mongo_import_example(example_mongo_import_crud import/e3_crud.cc)
    galay_add_mongo_import_example(example_mongo_import_pipeline import/e4_pipeline.cc)
    galay_add_mongo_import_example(example_mongo_import_command import/e5_command.cc)
endif()
