function(galay_add_mysql_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay::mysql)
    target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR})
    galay_mysql_apply_cxx(${target_name})
endfunction()

function(galay_add_mysql_import_example target_name source_file)
    if(NOT TARGET galay-mysql-modules)
        return()
    endif()
    galay_add_mysql_example(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-mysql-modules)
endfunction()

galay_add_mysql_example(example_mysql_include_sync_query include/e1_query.cc)
galay_add_mysql_example(example_mysql_include_async_query include/e2_query.cc)
galay_add_mysql_example(example_mysql_include_pool include/e3_pool.cc)
galay_add_mysql_example(example_mysql_include_prepared_statement include/e4_prepared.cc)
galay_add_mysql_example(example_mysql_include_pipeline include/e5_pipeline.cc)

if(GALAY_MYSQL_BUILD_MODULE_EXAMPLES_EFFECTIVE)
    galay_add_mysql_import_example(example_mysql_import_sync_query import/e1_query.cc)
    galay_add_mysql_import_example(example_mysql_import_async_query import/e2_query.cc)
    galay_add_mysql_import_example(example_mysql_import_pool import/e3_pool.cc)
    galay_add_mysql_import_example(example_mysql_import_prepared_statement import/e4_prepared.cc)
    galay_add_mysql_import_example(example_mysql_import_pipeline import/e5_pipeline.cc)
endif()
