function(galay_add_rpc_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay::rpc)
    target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/src)
    set_target_properties(${target_name} PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON)
endfunction()

function(galay_add_rpc_import_example target_name source_file)
    if(NOT TARGET galay-rpc-modules)
        return()
    endif()
    galay_add_rpc_example(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-rpc-modules)
    set_target_properties(${target_name} PROPERTIES CXX_SCAN_FOR_MODULES ON)
endfunction()

galay_add_rpc_example(example_rpc_include_echo_server include/e1_echo.cc)
galay_add_rpc_example(example_rpc_include_echo_client include/e2_echo.cc)
galay_add_rpc_example(example_rpc_include_stream_server include/e3_stream.cc)
galay_add_rpc_example(example_rpc_include_stream_client include/e4_stream.cc)

galay_add_rpc_import_example(example_rpc_import_echo_server import/e1_echo.cc)
galay_add_rpc_import_example(example_rpc_import_echo_client import/e2_echo.cc)
galay_add_rpc_import_example(example_rpc_import_stream_server import/e3_stream.cc)
galay_add_rpc_import_example(example_rpc_import_stream_client import/e4_stream.cc)
