function(galay_add_ssl_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay::ssl)
    target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/src)
    set_target_properties(${target_name} PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON)
endfunction()

function(galay_add_ssl_import_example target_name source_file)
    if(NOT TARGET galay-ssl-modules)
        return()
    endif()
    galay_add_ssl_example(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-ssl-modules)
    set_target_properties(${target_name} PROPERTIES CXX_SCAN_FOR_MODULES ON)
endfunction()

galay_add_ssl_example(example_ssl_include_echo_server include/e1_echo.cc)
galay_add_ssl_example(example_ssl_include_echo_client include/e2_echo.cc)
galay_add_ssl_example(example_ssl_include_custom_context include/e3_custom.cc)
galay_add_ssl_example(example_ssl_include_builder_config include/e4_builder.cc)

galay_add_ssl_import_example(example_ssl_import_echo_server import/e1_echo.cc)
galay_add_ssl_import_example(example_ssl_import_echo_client import/e2_echo.cc)
galay_add_ssl_import_example(example_ssl_import_custom_context import/e3_custom.cc)
galay_add_ssl_import_example(example_ssl_import_builder_config import/e4_builder.cc)
